--- a/blocks/form/__input-name/form__input-name.css
+++ b/blocks/form/__input-name/form__input-name.css
@@ -1,8 +1,7 @@
 .form__input-name {
   width: 100%;
   border: none;
-  border-bottom: 1px solid #000;
-  opacity: 0.2;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 8px;
   margin-bottom: 30px;
   font-family: 'Inter', Arial, sans-serif;
