--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,6 @@
   background-color: #000;
   color: #fff;
   margin: 0 auto;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
