--- a/blocks/form/__save/form__save.css
+++ b/blocks/form/__save/form__save.css
@@ -3,6 +3,7 @@
   height: 50px;
   background-color: #000;
   color: #fff;
+  border: none;
   border-radius: 2px;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
