--- a/blocks/elements/__item-img/elements__item-img.css
+++ b/blocks/elements/__item-img/elements__item-img.css
@@ -1,6 +1,7 @@
 .elements__item-img {
   width: 100%;
-  object-fit: contain;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   display: block;
