--- a/blocks/elements/__item-like/elements__item-like.css
+++ b/blocks/elements/__item-like/elements__item-like.css
@@ -1,4 +1,5 @@
 .elements__item-like {
+  background: url(../../../../images/like.svg) transparent center;
   max-width: 22px;
   height: 19px;
   width: 100%;
