--- a/blocks/popup/__add-close/popup__add-close.css
+++ b/blocks/popup/__add-close/popup__add-close.css
@@ -1,4 +1,4 @@
-.popup__close {
+.popup__add-close {
   background-image: url(../../../images/close.svg);
   background-color: transparent;
   background-size: cover;
@@ -11,14 +11,14 @@
   top: -42px;
 }
 
-.popup__close:hover {
+.popup__add-close:hover {
   cursor: pointer;
   opacity: 0.6;
   transition: 0.2s;
 }
 
 @media screen and (max-width: 560px) {
-  .popup__close {
+  .popup__add-close {
     width: 20px;
     height: 20px;
     left: 262px;
