--- a/styles/index.css
+++ b/styles/index.css
@@ -15,20 +15,32 @@
 @import url(../blocks/profile/__add/profile__add.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__item/elements__item.css);
+@import url(../blocks/elements/__item-trash/elements__item-trash.css);
 @import url(../blocks/elements/__item-img/elements__item-img.css);
 @import url(../blocks/elements/__item-container/elements__item-container.css);
 @import url(../blocks/elements/__item-name/elements__item-name.css);
 @import url(../blocks/elements/__item-like/elements__item-like.css);
-@import url(../blocks/elements/__item-like/_off/elements__item-like_off.css);
+@import url(../blocks/elements/__item-like/_on/elements__item-like_on.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__edit/popup__edit.css);
+@import url(../blocks/popup/__add/popup__add.css);
+@import url(../blocks/popup/__img/popup__img.css);
 @import url(../blocks/popup/__open/popup__open.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__edit-close/popup__edit-close.css);
+@import url(../blocks/popup/__add-close/popup__add-close.css);
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input-name/form__input-name.css);
 @import url(../blocks/form/__input-description/form__input-description.css);
+@import url(../blocks/form/__input-city/form__input-city.css);
+@import url(../blocks/form/__input-link/form__input-link.css);
 @import url(../blocks/form/__save/form__save.css);
+@import url(../blocks/popup/__img-container/popup__img-container.css);
+@import url(../blocks/popup/__img-close/popup__img-close.css);
+@import url(../blocks/img/img.css);
+@import url(../blocks/img/__full/img__full.css);
+@import url(../blocks/img/__title/img__title.css);
