--- a/blocks/popup/_add/popup_add.css
+++ b/blocks/popup/_add/popup_add.css
@@ -1,5 +1,5 @@
-.popup__img {
-  background-color: rgba(0, 0, 0, 0.9);
+.popup_add {
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
