--- a/blocks/popup/_edit_close/popup_edit_close.css
+++ b/blocks/popup/_edit_close/popup_edit_close.css
@@ -1,4 +1,4 @@
-.popup__edit-close {
+.popup_edit_close {
   background-image: url(../../../images/close.svg);
   background-color: transparent;
   background-size: cover;
