--- a/blocks/popup/_add_close/popup_add_close.css
+++ b/blocks/popup/_add_close/popup_add_close.css
@@ -1,4 +1,4 @@
-.popup__add-close {
+.popup_add_close {
   background-image: url(../../../images/close.svg);
   background-color: transparent;
   background-size: cover;
@@ -11,14 +11,14 @@
   top: -42px;
 }
 
-.popup__add-close:hover {
+.popup_add_close:hover {
   cursor: pointer;
   opacity: 0.6;
   transition: 0.2s;
 }
 
 @media screen and (max-width: 560px) {
-  .popup__add-close {
+  .popup_add_close {
     width: 20px;
     height: 20px;
     left: 262px;
