--- a/blocks/popup/_img/popup_img.css
+++ b/blocks/popup/_img/popup_img.css
@@ -1,5 +1,5 @@
-.popup__edit {
-  background-color: rgba(0, 0, 0, 0.5);
+.popup_img {
+  background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: 0;
   left: 0;
