--- a/blocks/popup/_img_close/popup_img_close.css
+++ b/blocks/popup/_img_close/popup_img_close.css
@@ -1,4 +1,4 @@
-.popup__img-close {
+.popup_img_close {
   background-image: url(../../../images/close.svg);
   background-color: transparent;
   background-size: cover;
@@ -11,14 +11,14 @@
   top: -40px;
 }
 
-.popup__img-close:hover {
+.popup_img_close:hover {
   cursor: pointer;
   opacity: 0.6;
   transition: 0.2s;
 }
 
 @media screen and (max-width: 560px) {
-  .popup__img-close {
+  .popup_img_close {
     width: 20px;
     height: 20px;
     right: 0;
