--- a/blocks/popup/__edit-close/popup__edit-close.css
+++ b/blocks/popup/__edit-close/popup__edit-close.css
@@ -1,4 +1,4 @@
-.popup_edit_close {
+.popup__edit-close {
   background-image: url(../../../images/close.svg);
   background-color: transparent;
   background-size: cover;
