--- a/styles/index.css
+++ b/styles/index.css
@@ -32,6 +32,7 @@
 @import url(../blocks/popup/__edit-close/popup__edit-close.css);
 @import url(../blocks/popup/__add-close/popup__add-close.css);
 @import url(../blocks/form/__title/form__title.css);
+@import url(../blocks/popup/__input-error/_visible/popup__input-error_visible.css);
 @import url(../blocks/form/form.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__input-name/form__input-name.css);
@@ -39,6 +40,10 @@
 @import url(../blocks/form/__input-city/form__input-city.css);
 @import url(../blocks/form/__input-link/form__input-link.css);
 @import url(../blocks/form/__save/form__save.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__img-container/popup__img-container.css);
 @import url(../blocks/popup/__img-close/popup__img-close.css);
 @import url(../blocks/img/img.css);
