--- a/blocks/popup/_edit/popup_edit.css
+++ b/blocks/popup/_edit/popup_edit.css
@@ -7,4 +7,8 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s ease, opacity 0.5s ease;
 }
