--- a/blocks/popup/_img/popup_img.css
+++ b/blocks/popup/_img/popup_img.css
@@ -5,7 +5,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s ease, opacity 0.5s ease;
   justify-content: center;
   align-items: center;
 }
