--- a/styles/index.css
+++ b/styles/index.css
@@ -40,6 +40,7 @@
 @import url(../blocks/form/__input-city/form__input-city.css);
 @import url(../blocks/form/__input-link/form__input-link.css);
 @import url(../blocks/form/__save/form__save.css);
+@import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input-error/popup__input-error.css);
