--- a/blocks/elements/__item-like/_on/elements__item-like_on.css
+++ b/blocks/elements/__item-like/_on/elements__item-like_on.css
@@ -1,3 +1,5 @@
 .elements__item-like_on {
-  background: url(../../../../images/likeact.svg) transparent center;
+  background-image: url(../../../../images/likeact.svg);
+  background-color: transparent;
+  background-position: center;
 }
