--- a/src/blocks/profile/__info-name/profile__info-name.css
+++ b/src/blocks/profile/__info-name/profile__info-name.css
@@ -3,11 +3,11 @@
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 42px;
+  font-size: 40px;
   line-height: 1.14;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
+  /*overflow: hidden;*/
   padding-bottom: 10px;
 }
 
