--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,8 @@
 @import url(../blocks/content/content.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__edit/profile__edit.css);
+@import url(../blocks/profile/__button/profile__button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__container/profile__container.css);
 @import url(../blocks/profile/__info-name/profile__info-name.css);
@@ -21,16 +23,23 @@
 @import url(../blocks/elements/__item-name/elements__item-name.css);
 @import url(../blocks/elements/__item-like/elements__item-like.css);
 @import url(../blocks/elements/__item-like/_on/elements__item-like_on.css);
+@import url(../blocks/elements/__item-numbers/__item-numbers.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_edit/popup_edit.css);
 @import url(../blocks/popup/_add/popup_add.css);
 @import url(../blocks/popup/_img/popup_img.css);
+@import url(../blocks/popup/_ask/popup_ask.css);
+@import url(../blocks/popup/_avatar/popup_avatar.css);
 @import url(../blocks/popup/_open/popup_open.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__edit-close/popup__edit-close.css);
 @import url(../blocks/popup/__add-close/popup__add-close.css);
+@import url(../blocks/popup/__ask-close/popup__ask-close.css);
+@import url(../blocks/popup/__ask-container/popup__ask-container.css);
+@import url(../blocks/popup/__avatar-close/popup__avatar-close.css);
+@import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/form/__title/form__title.css);
 @import url(../blocks/popup/__input-error/_visible/popup__input-error_visible.css);
 @import url(../blocks/form/form.css);
@@ -39,6 +48,7 @@
 @import url(../blocks/form/__input-description/form__input-description.css);
 @import url(../blocks/form/__input-city/form__input-city.css);
 @import url(../blocks/form/__input-link/form__input-link.css);
+@import url(../blocks/form/__input-avatar/form__input-avatar.css);
 @import url(../blocks/form/__save/form__save.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
