--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -7,3 +7,13 @@
   width: 100%;
   height: 120px;
 }
+
+.profile__avatar:hover {
+  background-image: url(../../../images/editbutton.svg);
+  background-color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+  opacity: 0.2;
+  background-size: 26px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
