--- a/src/blocks/profile/__edit/profile__edit.css
+++ b/src/blocks/profile/__edit/profile__edit.css
@@ -1,4 +1,4 @@
-.profile__edit {
+/*.profile__edit {
   margin: 0;
   padding: 0;
   max-width: 120px;
@@ -14,4 +14,4 @@
   background-size: 26px;
   background-repeat: no-repeat;
   background-position: center;
-}
+}*/
